Fixed tables overflowing

--- a/static/base.css
+++ b/static/base.css
@@ -25,6 +25,11 @@ a {
     width: 100%;
 }
 
+.center-table {
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .content-wrapper {
     display: flex;
     flex-direction: column;
@@ -84,5 +89,5 @@ a {
 }
 
 .table-container {
-    height: 100%;
+    overflow: auto;
 }
